package cz.phsoft.hokej.user.services;

import cz.phsoft.hokej.user.repositories.AppUserHistoryRepository;
import cz.phsoft.hokej.user.dto.AppUserHistoryDTO;
import cz.phsoft.hokej.user.mappers.AppUserHistoryMapper;
import org.springframework.stereotype.Service;

import java.util.List;

/**
 * Implementace servisní vrstvy pro práci s historií uživatelských účtů.
 *
 * Zajišťuje načítání historických záznamů uživatele z databáze
 * prostřednictvím repozitáře a jejich převod na DTO objekty
 * pomocí mapperu.
 *
 * Třída neprovádí žádné zápisy do databáze. Historické záznamy
 * jsou vytvářeny databázovými triggery a tato služba slouží
 * výhradně pro čtecí a auditní účely.
 */
@Service
public class AppUserHistoryServiceImpl implements AppUserHistoryService {

    private final AppUserHistoryRepository repository;
    private final AppUserHistoryMapper mapper;

    /**
     * Vytvoří instanci servisní třídy.
     *
     * Závislosti jsou předány pomocí konstruktoru a používají se
     * pro načítání historických záznamů z databáze a jejich mapování
     * do přehledové DTO podoby.
     *
     * @param repository repozitář pro přístup k historickým záznamům uživatelů
     * @param mapper mapper pro převod entit na DTO objekty
     */
    public AppUserHistoryServiceImpl(
            AppUserHistoryRepository repository,
            AppUserHistoryMapper mapper
    ) {
        this.repository = repository;
        this.mapper = mapper;
    }

    /**
     * Vrátí historii změn uživatele podle jeho e-mailové adresy.
     *
     * Záznamy jsou načteny z databáze v sestupném pořadí
     * podle času změny a následně převedeny na DTO objekty.
     * Metoda se používá při zobrazení historie účtu na základě e-mailu.
     *
     * @param email e-mailová adresa uživatele
     * @return seznam historických záznamů uživatele
     */
    @Override
    public List<AppUserHistoryDTO> getHistoryForUser(String email) {
        return mapper.toDTOList(
                repository.findByEmailOrderByChangedAtDesc(email)
        );
    }

    /**
     * Vrátí historii změn uživatele podle jeho identifikátoru.
     *
     * Záznamy jsou načteny z databáze v sestupném pořadí
     * podle času změny a následně převedeny na DTO objekty.
     * Metoda se používá při zobrazení historie účtu na základě interního ID.
     *
     * @param id identifikátor uživatele
     * @return seznam historických záznamů uživatele
     */
    @Override
    public List<AppUserHistoryDTO> getHistoryForUser(Long id) {
        return mapper.toDTOList(
                repository.findByUserIdOrderByChangedAtDesc(id)
        );
    }
}